<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/corner_white_promo_code">
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/promo_code_tab_height"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/closeBtn"
            android:layout_width="@dimen/promo_code_tab_height"
            android:layout_height="@dimen/promo_code_tab_height"
            android:padding="@dimen/promo_code_close_img_padding"
            android:src="@mipmap/close_dark_grey"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/promo_code_tab_height"
            android:gravity="center"
            android:fontFamily="@font/avenir_next_demi_bold"
            android:textSize="@dimen/promo_code_tab_title_txt"
            android:textColor="@color/darkGrey"
            android:text="@string/promo_code_bat_title"/>

    </RelativeLayout>

    <View
        android:id="@+id/divide"
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_page_sel_res_divide_height"
        android:layout_marginTop="@dimen/main_page_sel_res_divide_height"
        android:background="@color/divideGrey"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/promo_code_img_height"
        android:layout_margin="@dimen/promo_code_img_margin">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="@dimen/main_page_slider_background_height"
            android:scaleType="centerCrop"
            android:src="@mipmap/slider_background"
            app:riv_corner_radius="@dimen/main_page_slider_background_corner_radius"/>

        <TextView
            android:id="@+id/title"
            android:layout_width="@dimen/main_page_slider_title_width"
            android:layout_height="@dimen/main_page_slider_title_height"
            android:textColor="@color/colorWhite"
            android:gravity="end"
            android:layout_centerVertical="true"
            android:fontFamily="@font/avenir_next_bold"
            android:textSize="@dimen/main_page_slider_title_text_size"
            android:layout_marginEnd="@dimen/main_page_slider_title_margin_end"
            android:layout_alignParentEnd="true"
            android:text="@string/main_page_slider_title"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/avenir_next_demi_bold"
        android:textColor="@color/colorPrimary"
        android:gravity="center_horizontal"
        android:textIsSelectable="true"
        android:layout_marginTop="@dimen/promo_code_code_margin_top"
        android:textSize="@dimen/promo_code_code_text_size"
        android:text="aaXdf124"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/promo_code_desc_margin_start"
        android:layout_marginEnd="@dimen/promo_code_desc_margin_end"
        android:layout_marginTop="@dimen/promo_code_desc_margin_top"
        android:fontFamily="@font/avenir_next_regular"
        android:gravity="center_horizontal"
        android:textSize="@dimen/promo_code_desc_text"
        android:textColor="@color/darkGrey"
        android:text="@string/promo_code_desc"/>

    <Button
        android:id="@+id/copyBtn"
        android:layout_width="@dimen/promo_code_copy_btn_width"
        android:layout_height="@dimen/promo_code_copy_btn_height"
        android:layout_marginTop="@dimen/promo_code_copy_btn_margin_top"
        android:layout_gravity="center_horizontal"
        android:text="@string/promo_code_copy"
        android:textSize="@dimen/promo_code_copy_btn_text"
        android:fontFamily="@font/avenir_next_demi_bold"
        android:textColor="@color/colorWhite"
        android:background="@drawable/corner_btn_green"/>



</LinearLayout>